<resources>
    <string name="app_name">data++</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密  码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_reg">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_invalid_account">该用户名已被注册</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
